Fix for Firefox not showing 2nd level drop downs (see https://www.drupal.org/node/2360249).

--- a/profiles/openlocal/modules/contrib/admin_menu/admin_menu.css
+++ b/profiles/openlocal/modules/contrib/admin_menu/admin_menu.css
@@ -97,13 +97,8 @@ body.admin-menu {
 }
 #admin-menu .dropdown li li {
   background: #202020;
-  filter: Alpha(opacity=88);
-  opacity: 0.88;
+  background-color: rgba(69,69,74, 0.88);
   width: 160px; /* Required for Opera */
-}
-#admin-menu .dropdown li li li {
-  filter: Alpha(opacity=100);
-  opacity: 1;
 }
 
 /* Second-level lists */
